Closed
Bug 375986
Opened 18 years ago
Closed 18 years ago
Add support for schema validation of mixed content models
Categories
(Core Graveyard :: XForms, defect)
Core Graveyard
XForms
Tracking
(Not tracked)
RESOLVED
FIXED
People
(Reporter: sspeiche, Assigned: sspeiche)
Details
(Keywords: fixed1.8.0.12, fixed1.8.1.4)
Attachments
(2 files)
User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.8.1.3) Gecko/20070309 Firefox/2.0.0.3
Build Identifier:
Now it just returns fatal error that it is not supported.
Reproducible: Always
| Assignee | ||
Comment 1•18 years ago
|
||
| Assignee | ||
Comment 2•18 years ago
|
||
Guess I should follow up this bug with one stating that validation of element only content doesn't give error when mixed content is found. Will do that.
Attachment #260124 -
Flags: review?(doronr)
Updated•18 years ago
|
Attachment #260124 -
Flags: review?(doronr) → review+
| Assignee | ||
Updated•18 years ago
|
Attachment #260124 -
Flags: review?(aaronr)
Assignee: xforms → sspeiche
Status: UNCONFIRMED → NEW
Ever confirmed: true
Comment on attachment 260124 [details] [diff] [review]
patch
r=me when follow up bug mentioned above is opened and link to it provided in this bug.
Attachment #260124 -
Flags: review?(aaronr) → review+
| Assignee | ||
Comment 4•18 years ago
|
||
Opened bug 376367 about text nodes being allowed in element only models.
checked into trunk for sspeiche
Status: NEW → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
Whiteboard: xf-to-branch
checked into 1.8 branch on 2007-04-12
checked into 1.8.0 branch on 2007-04-16
Keywords: fixed1.8.0.12,
fixed1.8.1.4
Whiteboard: xf-to-branch
Updated•9 years ago
|
Product: Core → Core Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•