NPOTDB add support for schema validation of mixed content model. Bug 375986, r=doronr+aaronr